--- a/client/app/views/edit-listing.client.view.html
+++ b/client/app/views/edit-listing.client.view.html
@@ -1,1 +1,59 @@
-<!-- Fill in this file to create a UI view for editing listing entries. -->
+<div class="row" ng-controller="ListingsController" ng-init="findOne()">
+
+  <div class="col-md-offset-1 col-md-10">
+
+      <img id="loader" ng-show="loading" src="/../../img/484.gif">
+      <div ng-show="listing">
+
+        <h2>Building Name: {{listing.name}}</h2>
+
+        <h2>Building Code: {{listing.code}}</h2>
+
+        <h3>Address: {{listing.address}}</h3>
+
+      </div>
+
+
+	<form name="listingForm" class="form-horizontal" ng-submit="update(listingForm.$valid)">
+
+        <fieldset>
+
+          <div class="form-group">
+
+            <label for="code">Code</label>
+
+            <input name="code" type="text" ng-model="code" id="code" class="form-control" placeholder="Code">
+
+          </div>
+
+
+          <div class="form-group">
+
+            <label for="name">Name</label>
+
+            <input name="name" type="text" ng-model="name" id="name" class="form-control" placeholder="Name">
+
+          </div>
+
+
+          <div class="form-group">
+
+            <label for="address">Address</label>
+
+            <input name="address" type="text" ng-model="address" id="address" class="form-control" placeholder="Address">
+
+          </div>
+
+          <div class="form-group">
+
+            <input type="submit" class="btn btn-default">
+
+          </div>
+
+        </fieldset>
+
+      </form>
+
+  </div>
+
+</div>
