--- a/client/app/views/map-listings.client.view.html
+++ b/client/app/views/map-listings.client.view.html
@@ -1,10 +1,27 @@
-<!-- 
-  Create a new view that uses a map to display all the listings with the angular-google-maps library. 
-  Each listing should be displayed as a marker. Each marker, when clicked on, should display a window that 
-  provides the name, code, and address of the listing. 
+<!--
+  Create a new view that uses a map to display all the listings with the angular-google-maps library.
+  Each listing should be displayed as a marker. Each marker, when clicked on, should display a window that
+  provides the name, code, and address of the listing.
 
-  Some useful documentation: 
+  Some useful documentation:
     https://angular-ui.github.io/angular-google-maps/#!/api/google-map
     https://angular-ui.github.io/angular-google-maps/#!/api/markers
     https://angular-ui.github.io/angular-google-maps/#!/api/windows
   -->
+
+  <div id="map_canvas" ng-controller="ListingsController" ng-init="find()">
+      //loading gif from img file
+      <img id="loader" ng-show="loading" src="/../../img/484.gif">
+
+      <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="true" pan="true" options="options" bounds="map.bounds">
+          <ui-gmap-markers models="listings" idkey="'_id'"coords="'coordinates'" >
+            <ui-gmap-windows show="show">
+              <div ng-non-bindable>
+                  {{code}}<br/>
+                  {{name}}<br/>
+                  {{address}}
+                </div>
+              </ui-gmap-windows>
+          </ui-gmap-markers>
+      </ui-gmap-google-map>
+  </div>
